tests/multiflow/multiflow.exp
Error: apply.js:12
 12: apply(noRest, ['hi', 456]); // Error - 456 ~> 123
                          ^^^ number. Expected number literal `123`, got `456` instead
 10: function noRest(x: 'hi', y: 123): true { return true; }
                                 ^^^ number literal `123`

Error: apply.js:13
 13: apply(noRest, ['hi']); // Error - too few args
                   ^^^^^^ Cannot call `apply` with array literal bound to `args` because function [1] requires another argument from function type [2].
  References:
   10: function noRest(x: 'hi', y: 123): true { return true; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: function
    4:   fn: (...Args) => Ret,
             ^^^^^^^^^^^^^^^^ [2]: function type

Error: apply.js:19
 19: apply(withRest, ['hi', 456]); // Error - 456 ~> 123
                     ^^^^^^^^^^^ array literal
  4:   fn: (...Args) => Ret,
           ^^^^^^^^^^^^^^^^ rest parameter array of function type. This type is incompatible with the expected param type of
 17: function withRest(...rest: ['hi', 123]): true { return true; }
                                ^^^^^^^^^^^ tuple type
  The second tuple element is incompatible:
     19: apply(withRest, ['hi', 456]); // Error - 456 ~> 123
                                ^^^ number. Expected number literal `123`, got `456` instead
     17: function withRest(...rest: ['hi', 123]): true { return true; }
                                           ^^^ number literal `123`

Error: apply.js:20
 20: apply(withRest, ['hi']); // Error - too few args
                     ^^^^^^ array literal
  4:   fn: (...Args) => Ret,
           ^^^^^^^^^^^^^^^^ rest parameter array of function type. Tuple arity mismatch. This tuple has 1 elements and cannot flow to the 2 elements of
 17: function withRest(...rest: ['hi', 123]): true { return true; }
                                ^^^^^^^^^^^ tuple type

Error: apply.js:21
 21: apply(withRest, ['hi', 123, false]); // Error - too many args
                     ^^^^^^^^^^^^^^^^^^ array literal
  4:   fn: (...Args) => Ret,
           ^^^^^^^^^^^^^^^^ rest parameter array of function type. Tuple arity mismatch. This tuple has 3 elements and cannot flow to the 2 elements of
 17: function withRest(...rest: ['hi', 123]): true { return true; }
                                ^^^^^^^^^^^ tuple type

Error: apply.js:31
 31: applyType(noRest, ['hi', 456]); // Error - 456 ~> 123
                              ^^^ number. Expected number literal `123`, got `456` instead
 10: function noRest(x: 'hi', y: 123): true { return true; }
                                 ^^^ number literal `123`

Error: apply.js:32
 32: applyType(noRest, ['hi']); // Error - too few args
                       ^^^^^^ Cannot call `applyType` with array literal bound to `args` because function [1] requires another argument from function type [2].
  References:
   10: function noRest(x: 'hi', y: 123): true { return true; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: function
   25:   fn: (...Args) => Ret,
             ^^^^^^^^^^^^^^^^ [2]: function type

Error: apply.js:38
 38: applyType(withRest, ['hi', 456]); // Error - 456 ~> 123
                         ^^^^^^^^^^^ array literal
 25:   fn: (...Args) => Ret,
           ^^^^^^^^^^^^^^^^ rest parameter array of function type. This type is incompatible with the expected param type of
 17: function withRest(...rest: ['hi', 123]): true { return true; }
                                ^^^^^^^^^^^ tuple type
  The second tuple element is incompatible:
     38: applyType(withRest, ['hi', 456]); // Error - 456 ~> 123
                                    ^^^ number. Expected number literal `123`, got `456` instead
     17: function withRest(...rest: ['hi', 123]): true { return true; }
                                           ^^^ number literal `123`

Error: apply.js:39
 39: applyType(withRest, ['hi']); // Error - too few args
                         ^^^^^^ array literal
 25:   fn: (...Args) => Ret,
           ^^^^^^^^^^^^^^^^ rest parameter array of function type. Tuple arity mismatch. This tuple has 1 elements and cannot flow to the 2 elements of
 17: function withRest(...rest: ['hi', 123]): true { return true; }
                                ^^^^^^^^^^^ tuple type

Error: apply.js:40
 40: applyType(withRest, ['hi', 123, false]); // Error - too many args
                         ^^^^^^^^^^^^^^^^^^ array literal
 25:   fn: (...Args) => Ret,
           ^^^^^^^^^^^^^^^^ rest parameter array of function type. Tuple arity mismatch. This tuple has 3 elements and cannot flow to the 2 elements of
 17: function withRest(...rest: ['hi', 123]): true { return true; }
                                ^^^^^^^^^^^ tuple type

Error: jsx.js:30
 30: (<AcceptsWhatever />: number); // Error string ~> number
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `<AcceptsWhatever />` to number because string [1] is incompatible with number [2].
  References:
   29: declare function AcceptsWhatever(props: {} | null, children: any): string;
                                                                          ^^^^^^ [1]: string
   30: (<AcceptsWhatever />: number); // Error string ~> number
                             ^^^^^^ [2]: number

Error: jsx.js:31
 31: (<AcceptsWhatever name="hi">Text</AcceptsWhatever>: number); // Error string ~> number
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `<AcceptsWhatever />` to number because string [1] is incompatible with number [2].
  References:
   29: declare function AcceptsWhatever(props: {} | null, children: any): string;
                                                                          ^^^^^^ [1]: string
   31: (<AcceptsWhatever name="hi">Text</AcceptsWhatever>: number); // Error string ~> number
                                                           ^^^^^^ [2]: number

Error: jsx.js:34
 34: (<ExpectsProps />); // Error - missing prop
       ^^^^^^^^^^^^ function type. This type is incompatible with the bound on type parameter `C`:
 22:   C: (props: Props, children: Children) => Elem
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type
  The first parameter is incompatible:
     34: (<ExpectsProps />); // Error - missing prop
          ^^^^^^^^^^^^^^^^ null. This type is incompatible with
     33: declare function ExpectsProps(props: { name: string }, children: any): string;
                                              ^^^^^^^^^^^^^^^^ object type

Error: jsx.js:35
 35: (<ExpectsProps name="hi">Text</ExpectsProps>: number); // Error string ~> number
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `<ExpectsProps />` to number because string [1] is incompatible with number [2].
  References:
   33: declare function ExpectsProps(props: { name: string }, children: any): string;
                                                                              ^^^^^^ [1]: string
   35: (<ExpectsProps name="hi">Text</ExpectsProps>: number); // Error string ~> number
                                                     ^^^^^^ [2]: number

Error: jsx.js:38
 38: (<ExpectsChildrenTuple />); // Error - missing child
       ^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with the bound on type parameter `C`:
 10:   C: (props: {}, children: Children) => Elem
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type
  The second parameter is incompatible:
     38: (<ExpectsChildrenTuple />); // Error - missing child
          ^^^^^^^^^^^^^^^^^^^^^^^^ rest parameter array of `JSX(...)`. Tuple arity mismatch. This tuple has 0 elements and cannot flow to the 1 elements of
     37: declare function ExpectsChildrenTuple(props: any, children: [string]): string;
                                                                     ^^^^^^^^ tuple type

Error: jsx.js:40
 40: (<ExpectsChildrenTuple>{123}</ExpectsChildrenTuple>); // Error: number ~> string
       ^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with the bound on type parameter `C`:
 10:   C: (props: {}, children: Children) => Elem
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type
  The second parameter is incompatible:
     40: (<ExpectsChildrenTuple>{123}</ExpectsChildrenTuple>); // Error: number ~> string
          ^^^^^^^^^^^^^^^^^^^^^^ rest parameter array of `JSX(...)`. Has some incompatible tuple element with
     37: declare function ExpectsChildrenTuple(props: any, children: [string]): string;
                                                                     ^^^^^^^^ tuple type
      The first tuple element is incompatible:
         40: (<ExpectsChildrenTuple>{123}</ExpectsChildrenTuple>); // Error: number ~> string
                                     ^^^ number. This type is incompatible with
         37: declare function ExpectsChildrenTuple(props: any, children: [string]): string;
                                                                          ^^^^^^ string

Error: jsx.js:41
 41: (<ExpectsChildrenTuple>Hi {"there"}</ExpectsChildrenTuple>); // Error: too many children
       ^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with the bound on type parameter `C`:
 10:   C: (props: {}, children: Children) => Elem
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type
  The second parameter is incompatible:
     41: (<ExpectsChildrenTuple>Hi {"there"}</ExpectsChildrenTuple>); // Error: too many children
          ^^^^^^^^^^^^^^^^^^^^^^ rest parameter array of `JSX(...)`. Tuple arity mismatch. This tuple has 2 elements and cannot flow to the 1 elements of
     37: declare function ExpectsChildrenTuple(props: any, children: [string]): string;
                                                                     ^^^^^^^^ tuple type

Error: jsx.js:46
 46: (<ExpectsChildrenArray>{123}</ExpectsChildrenArray>); // Error: number ~> string
       ^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with the bound on type parameter `C`:
 10:   C: (props: {}, children: Children) => Elem
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type
  The second parameter is incompatible:
     46: (<ExpectsChildrenArray>{123}</ExpectsChildrenArray>); // Error: number ~> string
          ^^^^^^^^^^^^^^^^^^^^^^ rest parameter array of `JSX(...)`. Has some incompatible type argument with
     43: declare function ExpectsChildrenArray(props: any, children: Array<string>): string;
                                                                     ^^^^^^^^^^^^^ array type
      Type argument `T` is incompatible:
         46: (<ExpectsChildrenArray>{123}</ExpectsChildrenArray>); // Error: number ~> string
                                     ^^^ number. This type is incompatible with
         43: declare function ExpectsChildrenArray(props: any, children: Array<string>): string;
                                                                               ^^^^^^ string

Error: spread.js:7
  7: fun(...['hi'], ...[], ...[123], ...[true]); // Error - true is unused
                                         ^^^^ unused function argument. No more than 2 arguments are expected by
  3: function fun(x: 'hi', y: 123) {}
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function

Error: spread.js:8
  8: fun(...['hi'], ...[true], ...[123]); // Error: true ~> 123 and 123 is unused
                        ^^^^ boolean. This type is incompatible with the expected param type of
  3: function fun(x: 'hi', y: 123) {}
                              ^^^ number literal `123`

Error: spread.js:8
  8: fun(...['hi'], ...[true], ...[123]); // Error: true ~> 123 and 123 is unused
                                   ^^^ unused function argument. No more than 2 arguments are expected by
  3: function fun(x: 'hi', y: 123) {}
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function

Error: spread.js:19
 19: funWithRestArray(...['hi'], ...[true], ...[123]); // Error: true ~> 123
                                     ^^^^ boolean. This type is incompatible with the expected param type of
 14: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                           ^^^ number literal `123`

Error: spread.js:28
 28: funWithRestArray('hi', ...arrOf123, 'bye', ...arrOf123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rest parameter array of call of `funWithRestArray`. Has some incompatible type argument with
 14: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                                         ^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     28: funWithRestArray('hi', ...arrOf123, 'bye', ...arrOf123);
                                             ^^^^^ string. This type is incompatible with
     14: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                                                   ^^^^^^ number

Error: spread.js:28
 28: funWithRestArray('hi', ...arrOf123, 'bye', ...arrOf123);
                                         ^^^^^ string. This type is incompatible with
 14: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                           ^^^ number literal `123`


Found 24 errors
